Archive2/19/6f7ae32100a793/output
main.cpp:1:2: error: expected constructor, destructor, or type conversion before '(' token
 g(obj x) {
  ^
